--- a/src/interfacegrafica/frm_Calculadora.form
+++ b/src/interfacegrafica/frm_Calculadora.form
@@ -83,9 +83,9 @@
                   <Component id="txtNum2" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="rbSomar" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="rbMultiplicar" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="rbMultiplicar" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
